--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/LizzieLaShark/csv2json#readme",
   "dependencies": {
-    "csvtojson": "^1.0.3"
+    "csvtojson": "^1.0.3",
   }
 }
