--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "csv2json",
   "version": "1.0.0",
   "description": "csv to json for orgs converting to nationbuilder",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,11 @@
   "homepage": "https://github.com/LizzieLaShark/csv2json#readme",
   "dependencies": {
     "csvtojson": "^1.0.3",
+    "dotenv": "^2.0.0",
+    "express": "^4.14.0",
+    "superagent": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
